=== 0.0.3
* Added patches for the following:
  * RDF::Graph#properties
  * RDF::Graph#seq (Output rdf:Seq elements in order)
  * RDF::Graph#type_of
  * RDF::Literal.xmlliteral (Create literal and normalize XML)
  * RDF::Literal#xmlliteral?
  * RDF::Literal#anonymous? (missing from library)
  * RDF::Literal#to_s (only one of @lang or ^^type, not both)
  * RDF::URI#join (Don't add trailing '/')
* Reader fixes
* Writer progress

=== 0.0.2
* Added specs from RdfContext
* Added array_hacks, nokogiri_hacks, and rdf_escape
* Fixed most bugs that are not related to the underlying framework.
  * Specific failing testcases for rdf-isomorphic, RDF::Literaland others need to be constructed and added as issues against those gems.
* Removed interal graph in Reader and implement each_triple & each_statement to perform parsing

=== 0.0.1
* First port from RdfContext version 0.5.4